k8s/10-usuarios.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
  namespace: parqueaderos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
      - name: usuarios
        image: usuarios:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios
  namespace: parqueaderos
spec:
  selector:
    app: usuarios
  ports:
  - port: 9090
    targetPort: 9090
