k8s/12-ms-audit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-audit
  namespace: parqueaderos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-audit
  template:
    metadata:
      labels:
        app: ms-audit
    spec:
      containers:
      - name: ms-audit
        image: ms-audit:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3004
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-audit
  namespace: parqueaderos
spec:
  selector:
    app: ms-audit
  ports:
  - port: 3004
    targetPort: 3004
