k8s/14-vehiculo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehiculo
  namespace: parqueaderos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehiculo
  template:
    metadata:
      labels:
        app: vehiculo
    spec:
      containers:
      - name: vehiculo
        image: vehiculo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: vehiculo
  namespace: parqueaderos
spec:
  selector:
    app: vehiculo
  ports:
  - port: 3001
    targetPort: 3001
